[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Misc/Lava_Physics.gd" type="Script" id=1]

[node name="Lava_Physics" type="Area2D"]
z_index = 1
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Lava_Physics_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Lava_Physics_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Lava_Physics_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lava_Physics_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
